<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/edit_text_username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/username"
      android:inputType="textNoSuggestions"
      android:layout_margin="@dimen/default_margin_dense"
      android:imeOptions="actionNext"/>

  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/edit_text_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:layout_margin="@dimen/default_margin_dense"
      android:imeOptions="actionDone"/>

  <Button
      android:id="@+id/button_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/button_login"
      android:layout_margin="@dimen/activity_vertical_margin"
      style="@style/Widget.AppCompat.Button.Colored"/>
</LinearLayout>
