<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_person_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_person_detail"
   tools:context="com.mhmt.foodbasket.ui.persondetail.PersonDetailActivity"
>

  <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/profile_image"
      android:layout_width="96dp"
      android:layout_height="96dp"
      app:civ_border_width="2dp"
      app:civ_border_color="@color/colorAccent"
      android:layout_alignParentStart="true"
  />

  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/text_view_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toEndOf="@+id/profile_image"
      android:layout_alignTop="@id/profile_image"
      android:layout_alignBottom="@id/profile_image"
      android:gravity="center_vertical"
      android:layout_margin="@dimen/default_margin_sparse"
      android:editable="false"
      android:focusable="false"
      android:textSize="@dimen/default_text_size"
      app:met_hideUnderline="true"
  />

  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/text_view_birthdate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/default_margin"
      android:layout_below="@id/profile_image"
      android:layout_alignStart="@id/profile_image"
      android:editable="false"
      android:focusable="false"
      android:textSize="@dimen/default_text_size"
      app:met_floatingLabelTextSize="@dimen/default_label_size"
      app:met_floatingLabelText="@string/label_birthdate"
      app:met_floatingLabel="highlight"
      app:met_floatingLabelAlwaysShown="true"
  />

  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/text_view_cellphone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/text_view_birthdate"
      android:layout_alignStart="@id/profile_image"
      android:textSize="@dimen/default_text_size"
      app:met_floatingLabelTextSize="@dimen/default_label_size"
      app:met_floatingLabelText="@string/label_cellphone"
      app:met_floatingLabel="highlight"
      app:met_floatingLabelAlwaysShown="true"
      android:inputType="phone"
      android:digits="0123456789+"
      app:met_clearButton="true"
  />

  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/text_view_workphone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/text_view_cellphone"
      android:layout_alignStart="@id/profile_image"
      android:textSize="@dimen/default_text_size"
      app:met_floatingLabelTextSize="@dimen/default_label_size"
      app:met_floatingLabelText="@string/label_workphone"
      app:met_floatingLabel="highlight"
      app:met_floatingLabelAlwaysShown="true"
      android:inputType="phone"
      android:digits="0123456789+"
      app:met_clearButton="true"
  />

  <com.rengwuxian.materialedittext.MaterialEditText
      android:id="@+id/text_view_address"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/text_view_workphone"
      android:layout_alignStart="@id/profile_image"
      android:lines="2"
      android:textSize="@dimen/default_text_size"
      app:met_floatingLabelTextSize="@dimen/default_label_size"
      app:met_floatingLabelText="@string/label_addressphone"
      app:met_floatingLabel="highlight"
      app:met_floatingLabelAlwaysShown="true"
  />

</RelativeLayout>
